fix: fixed tooltip flicker

--- a/css/mopimopi.css
+++ b/css/mopimopi.css
@@ -685,7 +685,8 @@ input[type="range"] {
 	position: absolute;
 	z-index: 2000;
 	right: 1rem;
-	margin-top: 1rem;
+	bottom: 2rem;
+	margin-bottom: 2rem;
 	background: rgba(0, 0, 0, 0.9);
 	color: #fff;
 	padding: 1rem;
